crates/tmark-writers/tests/snapshots/fixtures__diag-label-duplicate@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h2 id="sec:a">A</h2>
<h2 id="sec:a">B</h2>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
