crates/tmark-writers/tests/snapshots/fixtures__diag-label-duplicate@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\subsection{A}\label{sec:a}

\subsection{B}\label{sec:a}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
