crates/tmark-writers/tests/snapshots/fixtures__diag-label-duplicate@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== A <sec:a>

== B <sec:a>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
