crates/tmark-writers/tests/snapshots/fixtures__diag-parse-internal@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>- ```h
1. i
</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
