crates/tmark-writers/tests/snapshots/fixtures__diag-parse-internal@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
- ```h
1. i

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
