crates/tmark-writers/tests/snapshots/fixtures__diag-prefix@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\leavevmode\phantomsection\label{rq:one}[?rq:one] A requirement with an undeclared series.

\begin{figure}[H]
\centering
\includegraphics[width=\linewidth]{trace.png}
\caption{Trace}\label{tbl:trace}
\end{figure}

---requires---
{
  "packages": [
    "float",
    "graphicx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "trace.png",
      "node": 5
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "rq"
  ]
}
