crates/tmark-writers/tests/snapshots/fixtures__diag-ref-ambiguous@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><span id="stock">This claim</span> is cited as <span class="unresolved">[?stock]</span>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
