crates/tmark-writers/tests/snapshots/fixtures__diag-ref-ambiguous@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\phantomsection\label{stock}This claim is cited as [?stock].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
