crates/tmark-writers/tests/snapshots/fixtures__diag-ref-ambiguous@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
This claim<stock> is cited as \[?stock\].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
